<resources>
    <string name="app_name">Stat Tracker</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="age">Age:</string>
    <string name="stat_overview">Stat overview:</string>
    <string name="era">ERA:</string>
    <string name="main_strikeouts">Strikeouts:</string>
    <string name="stat_breakdown">Stat Breakdown</string>
    <string name="game_log">Game Log</string>
    <string name="edit_details">Edit Personal Details</string>
    <string name="your_game_stats">Your Game Stats:</string>
    <string name="add_new_game">Add New Game:</string>
    <string name="date_of_game">Date of game</string>
    <string name="opponent">Opponent</string>
    <string name="innings_pitched">Innings Pitched</string>
    <string name="earned_runs">Earned Runs</string>
    <string name="home_runs">Home runs</string>
    <string name="walks">Walks</string>
    <string name="strikeouts">Strikeouts</string>
    <string name="hits">Hits</string>
    <string name="ground_balls">Ground Balls</string>
    <string name="pitch_count">Pitch count</string>
    <string name="batters_faced">Batters Faced</string>
    <string name="add_game">Add Game</string>
    <string name="your_name">Your Name</string>
    <string name="whip">Whip:</string>
    <string name="win_loss_record">Win-Loss Record:</string>
    <string name="game_details">Game Details</string>
    <string name="opp_col">Opponent:</string>
    <string name="date_col">Date of game:</string>
    <string name="pitch_count_col">Pitch Count:</string>
    <string name="welcome_message">Welcome To Stat Tracker!</string>
    <string name="please_enter_data">Please enter the following information</string>
    <string name="your_image">(your image)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age_log_in">Age</string>
    <string name="weight_log_in">Weight</string>
    <string name="height_log_in">Height</string>
    <string name="continue_button">Continue</string>
    <string name="game_map">Game map</string>
    <string name="title_activity_maps">Map</string>
    <string name="update">Update</string>
    <string name="total_pitches">Total Pitches:</string>
    <string name="so_percent">K%:</string>
    <string name="so_per_ip">K/9:</string>
    <string name="earned_runs_det">Earned Runs:</string>
    <string name="game_decision">Game Decision:</string>
    <string name="innings_pitched_det">Innings Pitched:</string>
    <string name="hits_det">Hits:</string>
    <string name="walks_det">Walks:</string>
    <string name="home_runs_det">Home Runs:</string>
    <string name="ground_balls_det">Ground Balls:</string>
    <string name="batters_faced_det">Batters Faced:</string>
</resources>
